--- a/index.html
+++ b/index.html
@@ -14,60 +14,92 @@
 <main>
 <h1>Classic Cheesecake Recipe</h1>
 <div class="description">
-<img src="images/6dots.svg" alt="6dots" class="6dots">
-<p>
+<img src="images/6dots.svg" alt="6dots" class="dots6">
+<p class="desc-text">
 Look no further for a creamy and ultra smooth classic cheesecake recipe! Paired with a buttery graham cracker crust, no one can deny its simple decadence. For the best results, bake in a water bath.
 </p>
-<div>
+</div>
 <img src="images/photo1.png" alt="cheesecake" class="cake-photo">
 <div class="recipe-box">
+  
+  <div class="recipe-box-mini">
+  <div class="mini-box yield-box">
+    <span class="material-icons serving-icon">restaurant_menu</span>
+    <div class="mini-text">
+      <p class="serving-title">Yields</p>
+      <p class="serving-text">12 servings</p>
+    </div>
+  </div>
+   <div class="mini-box time-box">
+    <span class="material-icons time-icon">schedule</span>
+    <div class="mini-text">
+      <p class="time-title">Prep TIme</p>
+      <p class="time-text">45 minutes</p>
+    </div>
+  </div>
+   <div class="mini-box time-box">
+    <span class="material-icons time-icon">schedule</span>
+    <div class="mini-text">
+      <p class="time-title">Cook Time </p>
+      <p class="time-text">1 hour</p>
+    </div>
+  </div>
+   <div class="mini-box time-box">
+    <span class="material-icons time-icon">schedule</span>
+    <div class="mini-text">
+      <p class="time-title">Total Time</p>
+      <p class="time-text">7,75 hours</p>
+    </div>
+  </div>
+</div>
+  
 <div class="recipe-box-details">
 <section class="ingredients">
   <h2>Ingredients</h2>
   <h3>Graham Cracker Crust</h3>
     <ul>
-      <li>
-        <input type="checkbox" value="graham cracker crumbs" name="graham cracker crumbs">
-        1 and 1/2 cups (150g) <em>graham cracker crumbs</em> (about 10 full sheet graham crackers)
+      <li class="ingredients-check">
+        <input type="checkbox" class="checkbox" value="graham cracker crumbs" name="graham cracker crumbs">
+        <p> 1 and 1/2 cups (150g) <em>graham cracker crumbs</em> (about 10 full sheet graham crackers) </p> 
       </li>
-      <li>
-        <input type="checkbox" value="unsalted butter" name="unsalted butter">
-        5 Tablespoons (70g) <em>unsalted butter</em>, melted
+      <li class="ingredients-check">
+        <input type="checkbox" class="checkbox" value="unsalted butter" name="unsalted butter">
+        <p> 5 Tablespoons (70g) <em>unsalted butter</em>, melted </p> 
       </li>
-      <li>
-        <input type="checkbox" value="granulated sugar" name="granulated sugar">
-        1/4 cup (50g) <em>granulated sugar</em>
+      <li class="ingredients-check">
+        <input type="checkbox" class="checkbox" value="granulated sugar" name="granulated sugar">
+        <p> 1/4 cup (50g) <em>granulated sugar</em> </p> 
       </li>
     </ul>
   <h3>Cheesecake</h3>
     <ul>
-      <li>
-        <input type="checkbox" value="cream cheese" name="cream cheese">
-        four 8-ounce blocks (904g) full-fat <em>cream cheese</em>, softened to room temperature
+      <li class="ingredients-check">
+        <input type="checkbox" class="checkbox" value="cream cheese" name="cream cheese">
+        <p>four 8-ounce blocks (904g) full-fat <em>cream cheese</em>, softened to room temperature</p>
       </li>
-      <li>
-        <input type="checkbox" value="granulated sugar" name="granulated sugar">
-        1 cup (200g) <em>granulated sugar</em>
+      <li class="ingredients-check">
+        <input type="checkbox" class="checkbox" value="granulated sugar" name="granulated sugar">
+        <p>1 cup (200g) <em>granulated sugar</em></p>
       </li>
-      <li>
-        <input type="checkbox" value="sour cream" name="sour cream">
-        1 cup (240g) full-fat <em>sour cream</em>, at room temperature
+      <li class="ingredients-check">
+        <input type="checkbox" class="checkbox" value="sour cream" name="sour cream">
+        <p>1 cup (240g) full-fat <em>sour cream</em>, at room temperature</p>
       </li>
-      <li>
-        <input type="checkbox" value="pure vanilla extract" name="pure vanilla extract">
-        1 teaspoon <em>pure vanilla extract</em>
+      <li class="ingredients-check">
+        <input type="checkbox" class="checkbox" value="pure vanilla extract" name="pure vanilla extract">
+        <p>1 teaspoon <em>pure vanilla extract</em></p>
       </li>
-      <li>
-        <input type="checkbox" value="fresh lemon juice" name="fresh lemon juice">
-        2 teaspoons <em>fresh lemon juice</em> (optional, but recommended)
+      <li class="ingredients-check">
+        <input type="checkbox" class="checkbox" value="fresh lemon juice" name="fresh lemon juice">
+        <p>2 teaspoons <em>fresh lemon juice</em> (optional, but recommended)</p>
       </li>
-      <li>
-        <input type="checkbox" value="eggs" name="eggs">
-        3 large <em>eggs</em>, at room temperature
+      <li class="ingredients-check">
+        <input type="checkbox" class="checkbox" value="eggs" name="eggs">
+        <p>3 large <em>eggs</em>, at room temperature</p>
       </li>
-      <li>
-        <input type="checkbox" value="topping" name="topping">
-        topping suggestions: salted caramel, lemon curd, strawberry topping, chocolate ganache, red wine chocolate ganache, fresh fruit, whipped cream, or raspberry sauce (recipe in notes)
+      <li class="ingredients-check">
+        <input type="checkbox" class="checkbox" value="topping" name="topping">
+        </p>topping suggestions: salted caramel, lemon curd, strawberry topping, chocolate ganache, red wine chocolate ganache, fresh fruit, whipped cream, or raspberry sauce (recipe in notes)</p>
       </li>
     </ul>
 </section>
@@ -83,38 +115,9 @@ Look no further for a creamy and ultra smooth classic cheesecake recipe! Paired 
     <li>Serve cheesecake with desired toppings. Cover and store leftover cheesecake in the refrigerator for up to 5 days.</li>
   </ol>
 </section>
-<span>Source: https://sallysbakingaddiction.com/classic-cheesecake/ </span>
+<span class="source-text">Source: https://sallysbakingaddiction.com/classic&#8209;cheesecake/ </span>
 </div>
-<div class="recipe-box-mini">
-  <div class="mini-box">
-    <span class="material-icons">restaurant_menu</span>
-    <div class="mini-text">
-      <p>Yields</p>
-      <p>12 servings</p>
-    </div>
-  </div>
-   <div class="mini-box">
-    <span class="material-icons">schedule</span>
-    <div class="mini-text">
-      <p>Prep TIme</p>
-      <p>45 minutes</p>
-    </div>
-  </div>
-   <div class="mini-box">
-    <span class="material-icons">schedule</span>
-    <div class="mini-text">
-      <p>Cook Time </p>
-      <p>1 hour</p>
-    </div>
-  </div>
-   <div class="mini-box">
-    <span class="material-icons">schedule</span>
-    <div class="mini-text">
-      <p>Total Time</p>
-      <p>7,75 hours</p>
-    </div>
-  </div>
-</div>
+
 </div>
 </main>
 
