--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="en" dir="ltr">
   
   <head>
   <meta charset="utf-8">
-    <title>Interior Consultant</title>
+    <title>Recipe Page</title>
     <link rel="icon" href="images/devchallenges.png" type="image/icon type">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
