--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <div  class="section-box" id="personal-info-box"> 
     <img src="https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/profilepic_sample.png" id="profile-pic" alt="My profile picture">
       <div id="profile-text">
+        <div id="profile-top-box">
+        <div id="name-box">
       <h1 id="my-name">WY Chan</h1>
       <p>Front-end developer</p>
+          </div>
       <div id="contact-box">
         
         <p><span class="material-icons">
@@ -28,6 +31,7 @@ email
 call
 </span> (+000) 000 000 000</p>
       </div>
+          </div>
       
       <p id="intro-p">Self-motivated developer, who is willing to learn and create outstanding UI applications. 
  </p>
@@ -146,10 +150,11 @@ chevron_right
      <div class="exp-box"> 
      <div class="exp-box-1">
        <img class="exp-icon" alt="" src="https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/icon_questionmark.png">
-       <div class="exp-text">
-         <p>XXX XXXX - XXX XXXX</p>
-         <h5>Front-end developer</h5>
-         <p>I have no related working experience, but I am now learning front end development.</p>
+ 
+         <div class="exp-text">
+         <p class="exp-text-top">XXX XXXX - XXX XXXX</p>
+         <h5 class="exp-text-top">Front-end developer</h5>
+         <p>I have no related working experience. I am now learning front end development.</p>
        </div>
      </div>
      </div>
@@ -158,25 +163,25 @@ chevron_right
   
 <section id="hobby" class="tile">
        <div class="section-box">
-    <h4>Hobby</h4>
+    <h4>Hobbies</h4>
      <div class="hobby-box"> 
      <div class="hobby-box-s">
        <img class="hobby-img" alt="" src="https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/hobby_art.png">
-       <div class="exp-text">
+       <div class="hobby-text">
          <h5>Art & Craft</h5>
          <p>I like art and crafts!</p>
        </div>
      </div>
        <div class="hobby-box-s">
        <img class="hobby-img" alt="" src="https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/hobby_music.png">
-       <div class="exp-text">
+       <div class="hobby-text">
          <h5>Music</h5>
          <p>I like music!</p>
        </div>
      </div>
          <div class="hobby-box-s">
        <img class="hobby-img" alt="" src="https://raw.githubusercontent.com/wy-chan/devchallenges_Portfolio/main/images/hobby_cooking.png">
-       <div class="exp-text">
+       <div class="hobby-text">
          <h5>Cooking</h5>
          <p>I like cooking!</p>
        </div>
