--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ call
       </div>
           </div>
       
-      <p id="intro-p">Self-motivated developer, who is willing to learn and create outstanding UI applications. 
+      <p class="intro-p">Self-motivated developer, who is willing to learn and create outstanding UI applications. 
  </p>
-        <p id="intro-p">Self-motivated developer, who is willing to learn and create outstanding UI applications. 
+        <p class="intro-p">
  </p>
     </div>
     </div>
