--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <link rel="icon" href="images/devchallenges.png" type="image/icon type">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
+    
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <!--
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-    <!-- Load our React component. -->
+    -->
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
     <script src="script.js"></script>
   </head>
   
