--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
     -->
-    
+    <!-- Load jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
     <script src="script.js"></script>
