--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
         <p><span class="material-icons">
 email
-</span> example@example.com</p>
+</span>mailwychan@gmail.com </p>
         
         <p><span class="material-icons">
 call
