--- a/index.html
+++ b/index.html
@@ -206,10 +206,15 @@ chevron_right
      </div>
         </div>
 </section>
-  <div id="links-box">
+ <div id="links-box">
     <p>See My Profiles:
-    <a href="https://github.com/wy-chan" class="link"  target="_blank">GitHub</a>
-    <a href="https://codepen.io/wy-chan" class="link"  target="_blank">CodePen</a> 
+      <br>
+      <br>
+      <ul>
+      <li><span class="link-tag">GitHub</span><a href="https://github.com/wy-chan" class="link"  target="_blank">@wy-chan</a></li>
+      <br>
+      <li><span class="link-tag">CodePen</span><a href="https://codepen.io/wy-chan" class="link"  target="_blank">@wy-chan</a></li>
+      </ul>
     </p>
   </div>
 </main>
