--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@ chevron_right
         <p>JavaScript</p>
        <div class="skills-bg"><div class="skills-lv skills-js"></div></div>
        </div>
+      <div class="skills-box">
+        <p>jQuery</p>
+        <div class="skills-bg"><div class="skills-lv skills-jq"></div></div>
+     </div>
      <div class="skills-box">
         <p>React</p>
         <div class="skills-bg"><div class="skills-lv skills-react"></div></div>
