--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
   <meta charset="utf-8">
     <title>Portfolio</title>
-    <link rel="icon" href="images/profilepic_sample1.png" type="image/icon type">
+    <link rel="icon" href="images/devchallenges.png" type="image/icon type">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
     
